# ChangeLog for Gentoo Linux System Intialization ("rc") scripts 
# Copyright 2002 Gentoo Technologies, Inc.; Distributed under the GPL
# Written by Daniel Robbins (drobbins@gentoo.org)

  22 Jul 2002; Martin Schlemmer <azarah@gentoo.org>:

    Add the cyrus user to /etc/passwd.  Resolves bug #4100.

    Some bugfixes and speed improvements to /sbin/depscan.sh after
    last changes.

  21 Jul 2002; Martin Schlemmer <azarah@gentoo.org>:

    Fix LVM support in /etc/init.d/checkfs again, thanks to help from
    Kyle Manna <nitro@gentoo.org>.

    Add software RAID support to /etc/init.d/checkfs, thanks to
    Daniel Ahlberg <aliz@gentoo.org>.

    Update the cache_depend() funtion in /sbin/depscan.sh not to
    quit on any "}", but only on the one matching the first "{". This
    requires wc in /bin, so baselayout should depend on
    >=sys-apps/textutils-2.0.19-r2

    Update /etc/init.d/netmount to try and detect nfs mounts that should be
    mounted automatically on boot.  This requires awk in /bin, so baselayout
    should depend on >=sys-apps/gawk-3.1.0-r3.

* rc-scripts 1.3.6 (17 Jul 2002)

  17 Jul 2002; Martin Schlemmer <azarah@gentoo.org>:

    Add logging functionality to the rc-scripts, thanks to Alexander Holler,
    bug #4037 for the basic idea.  Updated /sbin/functions.sh for this.

  16 Jul 2002; Martin Schlemmer <azarah@gentoo.org>:

    Add additional entries to /etc/services to support cyrus-imapd, thanks
    to Nick Hadaway <raker@gentoo.org>.

    Update /etc/init.d/consolefont to resolve bug #4968.  This fixes a
    problem with non 7bit ascii symbols.

    Updated /etc/init.d/checkfs to detect if lvm is already active.
    This should resolve bug #3613.

  5 Jun 2002; Martin Schlemmer <azarah@gentoo.org>:

    Add "usb" group, gid 85.  Move "sshd" user and group to 22.  Move
    "games" user and group to 35

  3 Jun 2002; Martin Schlemmer <azarah@gentoo.org>:

    Update Copyright displayed at boot, thanks to Sascha Schwabbauer